[workspace]
members = ["ent", "crates/*"]
default-members = ["ent"]
resolver = "3"

[workspace.package]
version = "0.25.6"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
futures-util = "0.3.31"
glob = "0.3.1"
indicatif = "0.17.8"
inventory = "0.3.15"
reqwest = { version = "0.12.9", features = ["json"] }
semver = "1.0.26"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
stone_recipe = { git = "https://github.com/AerynOS/tools.git", version = "0.26.1"}
thiserror = "2.0.9"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
