[package]
name = "ent"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
ent_core = { path = "../crates/ent_core" }

clap.workspace = true
colored.workspace = true
futures-util.workspace = true
glob.workspace = true
indicatif.workspace = true
inventory.workspace = true
reqwest.workspace = true
semver.workspace = true
tokio.workspace = true

[features]
default = ["stone"]
stone = []
summit = []
ypkg = []
